Full width Submit button on Mobile Issue #22973
Matt requested that the Submit Button take up the width of the page on
small screens and mobile devices.

--- a/sites/all/themes/cc_zen/sass/components/_donate.scss
+++ b/sites/all/themes/cc_zen/sass/components/_donate.scss
@@ -81,10 +81,19 @@
 
     .crm-submit-buttons {
       height: 40px;
+      margin: 0;
+    }
+
+    .crm-button_qf_Main_upload {
+      width: 100%;
+      @include respond-to(medium) {
+        width: auto;
+      }
     }
 
     .crm-button input.form-submit {
       padding: 8px 10px;
+      width: 100%;
     }
 
   }
